Update env variable example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,19 @@
+
 # Google API Client
 GEMINI_API_KEY=
+GEMINI_BASE_URL=
 
 # MongoDB Client
 MONGODB_CONNECTION_STRING=
 MONGODB_DATABASE=
 MONGODB_COLLECTION=
+MONGODB_SEARCH_INDEX_NAME=
+MONGODB_VECTOR_EMBEDDING_PATH=
+MONGODB_SEARCH_TOP_K=
 
-# 
+
+# Embedding Models
+EMBEDDING_MODEL=
+EMBEDDINGS_SIZE=
+# Mistral AI
+MISTRAL_API_KEY=
